<resources>
    <string name="app_name">MaterialDesign</string>
    <string name="plus_minus">±</string>
    <string name="percent">%</string>
    <string name="backspace">←</string>
    <string name="clear">C</string>
    <string name="div">/</string>
    <string name="multi">*</string>
    <string name="minus">-</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="equal">=</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="choice_style">Выберите стиль для отображения</string>
    <string name="day_mode">Дневная тема</string>
    <string name="night_mode">Ночная тема</string>
    <string name="run_calculator">Запуск калькулятора</string>
    <string name="choice_calculator">Выбор темы для калькулятора</string>
    <string name="run_calculator_intent">Запуск калькулятора через интент</string>
</resources>