<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StyleActivity">

    <TextView
        android:id="@+id/textview_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choice_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radiogroup_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_title">

        <RadioButton
            android:id="@+id/radiobutton_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/day_mode" />

        <RadioButton
            android:id="@+id/radiobutton_night"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/night_mode" />
    </RadioGroup>

    <Button
        android:id="@+id/button_calculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/run_calculator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_style" />

    <Button
        android:id="@+id/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choice_calculator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiogroup_style" />

    <Button
        android:id="@+id/button_calculator_intent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/run_calculator_intent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_calculator" />
</androidx.constraintlayout.widget.ConstraintLayout>